    better UI approach
  - removed several unused variables and otherwise reduced the memory usage
    of the objects in Blackbox.  For the record we are about 100k larger than
    0.62.0 and that is mostly due to the STL.  However for the most part
    blackbox runs faster and is still one of the leanest window managers out
    there today.
  - smart window placement ignores shaded windows now
  - first the resurrection of the code and now the return of Brad!  Blackbox
    is only getting better with age.

Changes from 0.62.0 to 0.62.1:
  - the lock modifier code handles user redefined modifiers better
  - check if the locale actually needs multibyte support before using
    multibyte functions
  - use srcdir in all of the makefiles
  - added zh_CN (Chinese) nls support

Changes from 0.61.1 to 0.62.0:
  - the immorel release
  - added the ja_JP nls directory and man pages
  - general code touchups
  - blackbox-nls.hh is always generated even if --disable-nls is used.
    This allows us to not have all of those hideous #ifdef NLS chunks.
    Nothing to worry about, if you do not want NLS this does not affect you
  - Workspace::placeWindow() cleanups.  Also a speed bump from reducing the
    use of iterator->current() and changing the delta from 1 to 8
  - cleanups to compile with g++ 3.0
  - make distclean actually removes Translation.m and blackbox-nls.hh.
    Also fixed Makefile.am to pass --foreign instead of --gnu when calling
    the autotools.
  - fixed a desciptor leak in BScreen::parseMenuFile, seems opendir
    lacked a matching closedir.
  - fix transient window handling code in Workspace::removeWindow() so
    transients give focus back to their parents properly.  The code originally
    handled sloppy focus then transient windows, so we just flopped the
    if/elsif.  This is immediately noticable with web browsers and their open
    location windows.
  - plugged a small leak in ~Toolbar