@@ -267,16 +267,16 @@ BaseDisplay::BaseDisplay(const char *app_name, const char *dpy_name) {
   MaskList[0] = 0;
   MaskList[1] = LockMask;
   MaskList[2] = NumLockMask;
-  MaskList[3] = ScrollLockMask;
-  MaskList[4] = LockMask | NumLockMask;
-  MaskList[5] = NumLockMask  | ScrollLockMask;
-  MaskList[6] = LockMask | ScrollLockMask;
-  MaskList[7] = LockMask | NumLockMask | ScrollLockMask;
+  MaskList[3] = LockMask | NumLockMask;
+  MaskList[4] = ScrollLockMask;
+  MaskList[5] = ScrollLockMask | LockMask;
+  MaskList[6] = ScrollLockMask | NumLockMask;
+  MaskList[7] = ScrollLockMask | LockMask | NumLockMask;
   MaskListLength = sizeof(MaskList) / sizeof(MaskList[0]);
 
   if (modmap) XFreeModifiermap(const_cast<XModifierKeymap*>(modmap));
 
-  gccache = 0;
+  gccache = (BGCCache*) 0;
 }
 
 
@@ -354,18 +354,24 @@ void BaseDisplay::removeTimer(BTimer *timer) {
 /*
  * Grabs a button, but also grabs the button in every possible combination
  * with the keyboard lock keys, so that they do not cancel out the event.
+
+ * if allow_scroll_lock is true then only the top half of the lock mask
+ * table is used and scroll lock is ignored.  This value defaults to false.
  */
 void BaseDisplay::grabButton(unsigned int button, unsigned int modifiers,
                              Window grab_window, bool owner_events,
                              unsigned int event_mask, int pointer_mode,
                              int keyboard_mode, Window confine_to,
-                             Cursor cursor) const {
-  for (size_t cnt = 0; cnt < MaskListLength; ++cnt) {
+                             Cursor cursor, bool allow_scroll_lock) const {
+  unsigned int length = (allow_scroll_lock) ? MaskListLength / 2:
+                                              MaskListLength;
+  for (size_t cnt = 0; cnt < length; ++cnt) {
     XGrabButton(display, button, modifiers | MaskList[cnt], grab_window,
                 owner_events, event_mask, pointer_mode, keyboard_mode,
                 confine_to, cursor);
   }
 }
+
 
 /*
  * Releases the grab on a button, and ungrabs all possible combinations of the
@@ -386,10 +392,11 @@ const ScreenInfo* BaseDisplay::getScreenInfo(unsigned int s) const {
 }
 
 
-BGCCache *BaseDisplay::gcCache(void) const
-{
-    if (! gccache) gccache = new BGCCache(this);
-    return gccache;
+BGCCache* BaseDisplay::gcCache(void) const {
+  if (! gccache)
+    gccache = new BGCCache(this);
+  
+  return gccache;
 }
 
 
